# Lisna

./: .env.example  .gitignore  .gitmodules  .vercelignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: lanes.md  review-gate-on  settings.json
.claude/commands/: audit.md  backlog-sync.md  handoff.md  learn.md  refactor-next.md  rules-compress.md  rules-sunset.md  spec-new.md  visual-verify.md
.claude/hooks/: commit-msg-check.sh  pre-commit-check.sh  session-start.sh
.claude/mockups/: note-marker-locked.html  note-marker-variants.html  note-provenance-comparison.html
.claude/rules/: _index.md  architecture.md  domain.md  i18n.md  operations.md  pitfalls.md  testing.md  web-design.md  workflow.md
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: pitfall-discovery.md  refactor-task.md  rule-proposal.md
.github/workflows/: backlog-sync.yml  ci.yml  claude-audit.yml  deploy-backend.yml  manifest-verify.yml  migrate.yml  monitor-backend.yml  release.yml
backend/: package.json  tsconfig.json  vitest.config.ts
backend/infra/: allowlist-emails.json  cdk.json
backend/manifests/: README.md  SUNSET.md  model-manifest.v1.json
backend/scripts/: dump-transcript-fixture.ts  eval-curator.ts  fixture-from-youtube.ts  grant-pro.ts  measure-curator-latency.ts  preview-markdown.ts  verify-manifest.ts
backend/tests/: auth-google.test.ts  auth.test.ts  curator-normalise.test.ts  db.test.ts  env.test.ts  judge-parse.test.ts  llm.test.ts  markdown-obsidian.test.ts  markdown.test.ts  pdf.test.ts  quota.test.ts  session-curate.test.ts  session-delete.test.ts  sessions-list.test.ts  stripe-webhook.test.ts  stt.test.ts  telemetry-models.test.ts  users.test.ts
claude-toolkit-source/: BOOTSTRAP.md  README.md  project-template-CHECKLIST.md
claude-toolkit-source/personal/: CLAUDE.md  settings.json
cws-assets/: cws-submission-prompt.md
desktop/: .gitignore  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts  vitest.global-setup.ts
desktop/ci/: gates.ts  smoke-main-boot.ts
desktop/docs/: alpha-onboarding.md  manual-verification.md
desktop/eval/: README.md  anchor-match.ts  coverage.test.ts  coverage.ts  faithfulness-prepass.test.ts  faithfulness-prepass.ts  scorecard.test.ts  scorecard.ts
desktop/scripts/: eval-judge-swap.ts  eval-notes.test.ts  eval-notes.ts  eval-stt-corpus.ts  eval-stt.test.ts  eval-stt.ts  grammar-ab.ts  note-loop-run.ts  note-quality-eval.ts  score-spike-0.2.ts  test-with-cleanup.sh  transcribe-wav.ts  (+3 more)
desktop/sidecar/: CMakeLists.txt  README.md
desktop/sidecar/scripts/: build.sh
desktop/sidecar/src/: main.cpp
desktop/sidecar/src/ipc/: base64.cpp  base64.h  json_protocol.cpp  json_protocol.h
desktop/sidecar/src/lifecycle/: parent_watchdog.cpp  parent_watchdog.h
desktop/sidecar/src/llm/: chat_prompt.h  llama_engine.cpp  llama_engine.h
desktop/sidecar/src/memory/: os_reclaim.cpp  os_reclaim.h
desktop/sidecar/src/stt/: wav_reader.cpp  wav_reader.h  whisper_engine.cpp  whisper_engine.h
desktop/sidecar/tests/: CMakeLists.txt  test_chat_prompt.cpp  test_json_protocol.cpp  test_os_reclaim.cpp  test_wav_reader.cpp
docs/: DEPLOYMENT.md  DESIGN.md  HANDOFF.md  LAUNCH_CHECKLIST.md  PRD.md  REFACTOR_BACKLOG.md  operations.md
extension/: .gitignore  manifest.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
mockups/: _data.js  index.html  option-a-refined.html  option-b-notion.html  option-c-cards.html  option-d-split.html
shared/: package.json  tsconfig.json
web/: .env.example  .gitignore  drizzle.config.ts  middleware.ts  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+825 files in other folders)
